--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.unice.polytech.3a.project.dronedelivery</groupId>
+    <groupId>fr.unice.polytech.si3.dda</groupId>
     <artifactId>a</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>dda</name>
+    <name>Team : a</name>
     <url>http://maven.apache.org</url>
 
     <properties>
