--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
     <groupId>fr.unice.polytech.si3.dda</groupId>
     <artifactId>a</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>visualiser</module>
+        <module>benchmark</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <name>Team : a</name>
     <url>http://maven.apache.org</url>
