--- a/visualiser/pom.xml
+++ b/visualiser/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>visualiser</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>fr.unice.polytech.si3.dda</groupId>
+            <artifactId>a</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
