--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -11,5 +11,24 @@
 
     <artifactId>scheduler</artifactId>
 
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>java</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <mainClass>fr.unice.polytech.si3.dda.Main</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
-</project>
+        </project>
