--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -30,4 +30,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>fr.unice.polytech.si3.dda</groupId>
+            <artifactId>benchmark</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
