--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>benchmark</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>fr.unice.polytech.si3.dda</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
